# RegPaC

./: .flake8  .gitignore  LICENSE  README.md  install.sh
.github/workflows/: backend_ci.yml  build_and_push_docker_regpac.yml  build_and_push_docker_regpacwebdashboard.yml
Backend/: config.json  config_template.json  heat.py  heating_controller.py  localsql.py  main.py  temperature.py  tempo_provider.py
Backend/tests/: test_heating_controller.py
Deployement/Docker-Compose/: regpac-compose.yml
Deployement/Docker-Compose/config/: config.json  telegraf.conf
Deployement/Docker-Compose/config/grafana-provisioning/dashboards/: 2kernoble.json  home.json
Deployement/Docker-Compose/config/grafana-provisioning/datasources/: datasource.yml
Deployement/RegPac/: dockerfile
Deployement/WebDashboard/: .dockerignore  README.md  dockerfile  nginx.conf
FrontEnd/: CMakeLists.txt  Main.qml  main.cpp
FrontEnd/android/: AndroidManifest.xml
TestsBackend/: test_gettemperature.py  test_heating_controller.py  test_localsql.py  test_sendcmd_actuator.py  test_tempo_provider.py
WebDashboard/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
WebDashboard/src/: App.jsx  index.css
